--- a/css/login.css
+++ b/css/login.css
@@ -75,7 +75,7 @@ body {
 .shape-1 {
   width: 300px;
   height: 300px;
-  background: #ff9a9e;
+  background: #ff9a9a;
   top: -100px;
   left: -100px;
 }
