--- a/css/index.css
+++ b/css/index.css
@@ -38,6 +38,11 @@ body {background: var(--bg-color); color: var(--dark-red);}
 .hero-image-box {max-width:500px; max-height:420px; width:100%; margin-left:auto; border-radius:24px; overflow:hidden; box-shadow:0 20px 40px rgba(0,0,0,.25);}
 .hero-image-box img {width:100%; height:100%; object-fit:cover; padding: 10;}
 
+@media (max-width:768px) {
+  .hero-container {flex-direction:column; text-align:center;}
+  .hero-right {margin-top:20px;}
+}
+
 /* PAGE HIDDEN */
 .page {display:none;}
 .page.active {display:block;}
